# payup-backend

./: .env  .gitignore  .sample.env  Dockerfile  README.md  gcloudignore  main.py  my_data_model_diagram  pyproject.toml  requirements.txt  sample.env  test.json
Database/: init.sql
config/: constants.py
helperClass/: sandbox.py
migrations/: db_schema.py  docker-compose.yaml  manage.py  truncate_db.py
migrations/flyway/: flyway_commands.sh
migrations/flyway/sql/: V12__Alter_profile.sql  V13__Data_migration.sql  V1__init_db.sql  V2__Add_kyc_entities_table.sql  V3__Alter_users_table.sql  V4__Init_db.sql  V6__token_tables.sql  V7_Alter_kyc_table.sql  V7__Alter_kyc_table.sql  V9__Alter_kyc.sql
migrations/old_sql/: V10__Add_kyc_lookup.sql  V11__Alter_profile.sql  V13__Data_migration.sql  V14__Alter_otp_entity.sql  V15__Add_promotions_table.sql  V1__Add_users_table.sql  V3__Alter_users_table.sql  V5__Reset_otp_table.sql  V6__token_tables.sql  V8__Add_user_kyc_relations.sql
payup_backend/: app.yaml  main.py  requirements.txt
payup_backend/app/: app.py
payup_backend/app/cockroach_sql/: database.py  db_enums.py  schemas.py
payup_backend/app/cockroach_sql/dao/: device_dao.py  device_token_dao.py  kyc_dao.py  kyc_lookup_dao.py  kyc_user_dao.py  notification_dao.py  otp_dao.py  payee_dao.py  phone_dao.py  profile_dao.py  promotion_dao.py  tokens_dao.py  user_dao.py  (+1 more)
payup_backend/app/config/: constants.py  errors.py  exception_handler.py  logging.py
payup_backend/app/dependency/: authentication.py  expo_notification.py
payup_backend/app/helperClass/: logging_lib.py  sandbox.py  twilio.py  utils.py
payup_backend/app/models/: py_models.py
payup_backend/app/routers/: api_routes.py
payup_backend/app/utils/: encryption_utils.py
routes/auth/: otp.py  pan.py
schemas/: user.py
schemas/auth/: otp.py  pan.py
(+53 files in other folders)
